    an element if not present, trying hard to find the best place to
    put it.
  * Nokogiri::XML::DTD#html_dtd? and #html5_dtd? are added.
  * Nokogiri::XML::Node#prepend_child is added. #664
  * Nokogiri::XML::SAX::ParserContext#recovery is added. #453
  * Fix documentation for XML::Node#namespace. #803 #802 (Thanks, Hoylen Sue)

* Bugfixes

  * Ensure :only-child pseudo class works within :not pseudo class. #858
    (Thanks, Yamagishi Kazutoshi!)
  * Don't call pkg_config when using bundled libraries in extconf.rb
    #931 (Thanks, Shota Fukumori!)
  * Nokogiri.parse() does not mistake a non-HTML document like a RSS
    document as HTML document. #932 (Thanks, Yamagishi Kazutoshi!)
  * (JRuby) XSD validation crashes in Java version. #373
  * (JRuby) Document already has a root node error while using Builder. #646
  * (JRuby) c14n tests are all passing on JRuby. #226
  * Parsing empty documents raise SyntaxError in strict mode. #1005
  * (JRuby) Make xpath faster by caching the xpath context. #741
  * (JRuby) XML SAX push parser leaks memory on JRuby, but not on MRI. #998


=== 1.6.1 / 2013-12-14

* Bugfixes

  * (JRuby) Fix out of memory bug when certain invalid documents are parsed.
  * (JRuby) Fix regression of billion-laughs vulnerability. #586


=== 1.6.0 / 2013-06-08

This release was based on v1.5.10 and 1.6.0.rc1, and contains changes
mentioned in both.

* Deprecations

  * Remove pre 1.9 monitoring from Travis.


=== 1.6.0.rc1 / 2013-04-14

This release was based on v1.5.9, and so does not contain any fixes
mentioned in the notes for v1.5.10.

* Notes

  * mini_portile is now a runtime dependency
  * Ruby 1.9.2 and higher now required


* Features

  * (MRI) Source code for libxml 2.8.0 and libxslt 1.2.26 is packaged
    with the gem. These libraries are compiled at gem install time
    unless the environment variable NOKOGIRI_USE_SYSTEM_LIBRARIES is
    set. VERSION_INFO (also `nokogiri -v`) exposes whether libxml was